feat: add variables

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,3 +1,6 @@
-$color-blur: #3052d8;
+$color-blue: #3052d8;
 $color-black: #08113f;
 $color-white: #ffffff;
+$color-gray: #e1e8f8;
+
+$max-width: 1320px;
