--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,3 @@
 @import 'index.scss';
 @import 'vendor/normalize.css';
-@import 'scss/_mixins.scss';
-@import 'scss/_variables.scss';
+@import 'vendor/fonts/fonts.css';
