style: fix styles

--- a/src/index.scss
+++ b/src/index.scss
@@ -29,6 +29,7 @@ html {
     font-size: 70px;
     margin: 0;
     padding-bottom: 60px;
+    max-width: 20ch;
   }
 }
 .steps {
@@ -75,8 +76,8 @@ html {
   &__text {
     margin: 0;
     font-weight: bold;
-    line-height: 1.1;
-    font-size: 38px;
+    line-height: 1.17;
+    font-size: 36px;
     padding-bottom: 42px;
   }
   &__list {
@@ -84,7 +85,7 @@ html {
     @include unmarkedList;
     grid-template-columns: repeat(auto-fit, minmax(158px, 209px));
     gap: 13px;
-    padding-bottom: 120px;
+    padding-bottom: 130px;
     &-item {
       @include gridable(100%);
       align-content: space-between;
@@ -122,7 +123,7 @@ html {
           'text .';
         padding: 23px;
         box-sizing: border-box;
-        gap: 14px 130px;
+        gap: 14px;
         border-top: 1px solid $color-blue;
         &:last-child {
           border-bottom: 1px solid $color-blue;
@@ -153,6 +154,7 @@ html {
     }
     &__text {
       grid-area: text;
+      max-width: 1106px;
     }
     &__icon {
       grid-area: icon;
@@ -166,7 +168,7 @@ html {
     font-weight: bold;
     font-size: 50px;
     margin: 0;
-    padding-bottom: 60px;
+    padding-bottom: 50px;
   }
   &__link {
     @include defaultLink;
