--- a/src/index.scss
+++ b/src/index.scss
@@ -17,6 +17,11 @@ html {
   color: $color-black;
   background-color: $color-white;
   font-size: 22px;
+  @media screen and (max-width: $tablet) {
+    padding-top: 83px;
+    padding-bottom: 178px;
+    gap: 97px;
+  }
 }
 .section {
   @include gridable(100%);
@@ -30,22 +35,41 @@ html {
     margin: 0;
     padding-bottom: 60px;
     max-width: 20ch;
+    @media screen and (max-width: $tablet) {
+      font-size: 45px;
+    }
+    @media screen and (max-width: $smartphone) {
+      font-size: 34px;
+      padding-bottom: 55px;
+    }
   }
 }
 .steps {
   &__list {
     position: relative;
-    @include gridable(100%);
+    @include flexible(100%);
     grid-template-columns: repeat(5, 1fr);
-    gap: 58px;
+    flex-wrap: nowrap;
+    gap: 30px;
     @include unmarkedList;
+    @media screen and (max-width: $tablet) {
+      flex-direction: column;
+    }
     &::before {
       content: '';
       position: absolute;
       width: 100%;
       height: 2px;
+      left: 0;
       background-color: $color-blue;
       top: calc(51px / 2);
+      @media screen and (max-width: $tablet) {
+        flex-direction: column;
+        width: 2px;
+        height: 100%;
+        left: calc(51px / 2);
+        top: 0;
+      }
     }
     &-item {
       @include gridable(100%);
@@ -53,6 +77,11 @@ html {
       gap: 20px;
       justify-content: start;
       z-index: 10;
+      @media screen and (max-width: $tablet) {
+        grid-template-rows: max-content;
+        grid-template-columns: min-content 1fr;
+        gap: 33px;
+      }
       &:last-child {
         background-color: $color-white;
       }
@@ -60,9 +89,16 @@ html {
   }
   &__text {
     margin: 0;
+    @media screen and (max-width: $desktop) {
+      font-size: 16px;
+    }
+    @media screen and (max-width: $tablet) {
+      font-size: 19px;
+    }
   }
   &__number {
     @include flexible(51px);
+    font-weight: bold;
     justify-content: center;
     align-items: center;
     height: 51px;
@@ -79,24 +115,40 @@ html {
     line-height: 1.17;
     font-size: 36px;
     padding-bottom: 42px;
+    @media screen and (max-width: $tablet) {
+      font-size: 25px;
+      padding-bottom: 20px;
+    }
+  }
+  &__title {
+    @media screen and (max-width: $smartphone) {
+      padding-bottom: 40px;
+    }
   }
   &__list {
     @include gridable(100%);
     @include unmarkedList;
-    grid-template-columns: repeat(auto-fit, minmax(158px, 209px));
+    grid-template-columns: repeat(6, 1fr);
     gap: 13px;
-    padding-bottom: 130px;
     &-item {
       @include gridable(100%);
       align-content: space-between;
       background-color: $color-blue;
       color: $color-white;
       border-radius: 10px;
+      width: 209px;
       height: 152px;
       font-weight: 600;
       box-sizing: border-box;
       padding: 14px;
       gap: 18px;
+      @media screen and (max-width: $smartphone) {
+        padding: 10px;
+        width: 158px;
+        height: 115px;
+        gap: 10px;
+        font-size: 16px;
+      }
       &_active {
         background-color: $color-gray;
         color: $color-black;
@@ -110,9 +162,21 @@ html {
   &__icon {
     height: 50px;
     width: 50px;
+    @media screen and (max-width: $smartphone) {
+      width: 40px;
+      height: 40px;
+    }
   }
   &-info {
+    padding-top: 130px;
     padding-bottom: 65px;
+    @media screen and (max-width: $tablet) {
+      padding-top: 80px;
+    }
+    @media screen and (max-width: $smartphone) {
+      padding-top: 40px;
+      padding-bottom: 40px;
+    }
     &__list {
       @include unmarkedList;
       &-item {
@@ -125,6 +189,9 @@ html {
         box-sizing: border-box;
         gap: 14px;
         border-top: 1px solid $color-blue;
+        @media screen and (max-width: $tablet) {
+          padding: 20px 0;
+        }
         &:last-child {
           border-bottom: 1px solid $color-blue;
         }
@@ -141,9 +208,15 @@ html {
       @include gridable(100%);
       @include unmarkedList;
       gap: 14px;
+      @media screen and (max-width: $tablet) {
+        gap: 20px;
+      }
       &-item {
         list-style-type: disc;
         margin-left: 17px;
+        @media screen and (max-width: $tablet) {
+          margin-left: 21px;
+        }
         &::marker {
           color: $color-blue;
           width: 10px;
@@ -169,6 +242,10 @@ html {
     font-size: 50px;
     margin: 0;
     padding-bottom: 50px;
+    @media screen and (max-width: $tablet) {
+      font-size: 34px;
+      padding-bottom: 20px;
+    }
   }
   &__link {
     @include defaultLink;
@@ -184,5 +261,13 @@ html {
     max-width: 361px;
     box-sizing: border-box;
     border-radius: 60px;
+    @media screen and (max-width: $smartphone) {
+      font-size: 16px;
+      height: 48px;
+      max-width: 270px;
+    }
+  }
+  .slider {
+    overflow: hidden;
   }
 }
