--- a/src/index.scss
+++ b/src/index.scss
@@ -184,6 +184,7 @@ html {
       @include unmarkedList;
       &-item {
         @include gridable(100%);
+        column-gap: 15px;
         grid-template-areas:
           'title icon'
           'text .';
@@ -240,7 +241,6 @@ html {
       visibility: hidden;
       opacity: 0;
       transition: 0.5s linear;
-
       &_visible {
         max-height: 1000px;
         padding-top: 14px;
@@ -257,9 +257,11 @@ html {
       justify-content: center;
       align-items: center;
       box-sizing: border-box;
+      background-size: contain;
       height: 33px;
       padding: 0;
       background-image: url(images/arrow-icon.png);
+
       border: none;
       border-radius: 50%;
       cursor: pointer;
@@ -268,7 +270,6 @@ html {
       @media screen and (max-width: $smartphone) {
         width: 30px;
         height: 30px;
-        transform: scale(1, -1);
       }
       &_rotate {
         transform: scale(1, -1);
